# rust-license-tool

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-3rdparty.csv  README.md  bacon.toml  clippy.toml  deny.toml  publish.sh
.github/: CODEOWNERS  dependabot.yml  dependabot.yml.disabled
.github/workflows/: release.yml  test.yml
src/: main.rs
