[package]
name = "dd-rust-license-tool"
description = "A tool for creating the `LICENSE-3rdparty.csv` file for DataDog open-source Rust projects."
homepage = "https://github.com/DataDog/rust-license-tool"
repository = "https://github.com/DataDog/rust-license-tool"
readme = "README.md"
version = "1.0.6"
edition = "2021"
license = "MIT"
authors = ["Datadog, Inc."]
categories = ["command-line-utilities", "development-tools"]
keywords = ["datadog", "license", "3rdparty"]
rust-version = "1.82"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.'cfg(target_os = "windows")']
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.zip"
pkg-fmt = "zip"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.20"
cargo-util-schemas = "0.2"
clap = { version = "4.5.39", default-features = false, features = ["derive", "std", "help"] }
csv = "1.3.1"
hex = "0.4.3"
regex = "1.11.1"
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
url = "2.5.4"
